--- a/Gateway/src/main/resources/static/index.html
+++ b/Gateway/src/main/resources/static/index.html
@@ -7,5 +7,13 @@
 <body>
 <p>Login <a href="/Login?username=Egor&password=qwerty">here</a></p>
 <p>Register <a href="/Register?username=Egor&password=qwerty&role=2">here</a></p>
+<p>Show Cash <a href="/Show_Cash">here</a></p>
+<p>Add Cash <a href="/Add_Cash?cash=12.3">here</a></p>
+<p>Withdraw Cash <a href="/Withdraw_Cash?cash=12.3">here</a></p>
+<p>Show Calls <a href="/Show_Calls?page=0">here</a></p>
+<p>Add Call <a href="/Add_call?duration=14">here</a></p>
+<p>Account logs <a href="/Account_logs?page=0">here</a></p>
+<p>Calls logs <a href="/Payment_logs?page=0">here</a></p>
+<p>Payment logs <a href="/Payment_logs?page=0">here</a></p>
 </body>
 </html>
